--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/cool-responsive-portfolio-main/css/style.css">
 </head>
 
 <body>
